--- a/app/index.html
+++ b/app/index.html
@@ -31,18 +31,18 @@
 				Try For Free
 			</a>
 			<div class="hero__rectangles">
-				<img src="/images/dest/Vector1.svg" class="vector vector--top" alt="">
-				<img src="/images/dest/Vector2.svg" class="vector vector--bottom" alt="">
-				<img src="/images/dest/Ellipse.svg" class="vector vector--ellipse" alt="">
-				<img src="/images/dest/Vector3.svg" class="vector vector--rectangle" alt="">
-				<img src="/images/dest/Vector4.svg" class="vector vector--plus" alt="">
+				<img src="images/dest/Vector1.svg" class="vector vector--top" alt="">
+				<img src="images/dest/Vector2.svg" class="vector vector--bottom" alt="">
+				<img src="images/dest/Ellipse.svg" class="vector vector--ellipse" alt="">
+				<img src="images/dest/Vector3.svg" class="vector vector--rectangle" alt="">
+				<img src="images/dest/Vector4.svg" class="vector vector--plus" alt="">
 			</div>
 		</div>
 		</div>
 	</section>
 
 	<div class="hero__back">
-		<img src="/app/images/dest/isometric.svg" class="hero__image" alt="">
+		<img src="images/dest/isometric.svg" class="hero__image" alt="">
 	</div>
 
 	<section class="slideshow" id="slideshow">
@@ -55,7 +55,7 @@
 					<div class="swiper-wrapper">
 							<div class="swiper-slide">
 								<div class="card">
-									<img class="card-img" src="/app/images/dest/pro.svg" alt="">
+									<img class="card-img" src="images/dest/pro.svg" alt="">
 									<div class="card-body">
 										<h4 class="card-title">Design with real
 											data</h4>
@@ -105,7 +105,7 @@
 						</div>
 							<div class="swiper-slide">
 								<div class="card">
-									<img class="card-img" src="/app/images/dest/rectangle.svg" alt="">
+									<img class="card-img" src="images/dest/rectangle.svg" alt="">
 									<div class="card-body">
 										<h4 class="card-title">Work at the speed
 											of thought.</h4>
@@ -115,7 +115,7 @@
 											you identify .
 										</p>
 										<div class="card-chart">
-											<img src="/app/images/dest/Chart.svg" alt="">
+											<img src="images/dest/Chart.svg" alt="">
 										</div>
 									</div>
 								</div>
@@ -150,8 +150,8 @@
 				</div>
 				<div class="col-lg-6 col-sm-12">
 					<div class="subscribe__phone-img">
-						<img src="/app/images/dest/iPhoneX - White.svg" alt="" class="subscribe__phone">
-						<img src="/app/images/dest/iPhoneX - White--mob.svg" alt="" class="subscribe__phone--mob">
+						<img src="images/dest/iPhoneX - White.svg" alt="" class="subscribe__phone">
+						<img src="images/dest/iPhoneX - White--mob.svg" alt="" class="subscribe__phone--mob">
 					</div>
 				</div>
 			</div>
