--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 				Try For Free
 			</a>
 			<div class="hero__rectangles">
-				<img src="/app/images/dest/Vector1.svg" class="vector vector--top" alt="">
+				<img src="/images/dest/Vector1.svg" class="vector vector--top" alt="">
 				<img src="/app/images/dest/Vector2.svg" class="vector vector--bottom" alt="">
 				<img src="/app/images/dest/Ellipse.svg" class="vector vector--ellipse" alt="">
 				<img src="/app/images/dest/Vector3.svg" class="vector vector--rectangle" alt="">
